static done, loggin next

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome to my site!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="hello-world">HELLO WORLD</div>
+    <header>
+        <h1>Welcome to Tangerine!</h1>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h2>A new Python web framework by Noraa Stoke</h2>
+            <button>Learn More</button>
+        </section>
+
+        <section class="features">
+            <h2>Our Features</h2>
+            <ul>
+                <li>Fast and reliable</li>
+                <li>Easy to use</li>
+                <li>Secure and private</li>
+            </ul>
+        </section>
+
+        <section class="testimonials">
+            <h2>What People Are Saying</h2>
+            <blockquote>"This site is amazing! I can't believe how easy it is to use."</blockquote>
+            <cite>- Jane Doe</cite>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 My Site</p>
+    </footer>
 
 </body>
 </html>
